stars gap and image of slideshow corrected

--- a/src/components/AboutPage/DropdownBox.css
+++ b/src/components/AboutPage/DropdownBox.css
@@ -64,7 +64,7 @@
 }
 
 .dropdown-box-twice {
-  width: 45%;
+  width: 48%;
 }
 
 .dropdown-box-large {
