--- a/src/components/RentalPage/Slideshow.css
+++ b/src/components/RentalPage/Slideshow.css
@@ -1,7 +1,8 @@
 .slideshow-wrapper {
   position: relative;
   width: 100%;
-  max-width: 1440px;
+  aspect-ratio: 4/3;
+  max-height: 415px;
   margin: 0 auto 5px auto;
   border-radius: 10px;
   overflow: hidden;
@@ -10,7 +11,7 @@
 .slideshow-image {
   position: relative;
   width: 100%;
-  height: auto;
+  height: 100%
   object-fit: cover;
   border-radius: 10px;
 }
@@ -48,7 +49,7 @@
 @media (width >= 768px) {
   .slideshow-wrapper {
     border-radius: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
   }
 
   .previous-arrow,
