--- a/src/components/RentalPage/StarRating.css
+++ b/src/components/RentalPage/StarRating.css
@@ -1,5 +1,7 @@
 .stars {
   font-size: 24px;
+  display: flex;
+  gap: 5px;
 }
 
 .star-full {
