--- a/src/styles/Rental.css
+++ b/src/styles/Rental.css
@@ -1,8 +1,3 @@
-.announces {
-  display: flex;
-  justify-content: center;
-}
-
 .announces-title {
   text-align: center;
   margin-bottom: 20px;
@@ -61,7 +56,7 @@
 .announce-rating-host {
   display: flex;
   justify-content: space-evenly;
-  gap: 25%;
+  gap: 15%;
   align-items: center;
   margin: 10px 5px 15px 5px;
 }
@@ -90,6 +85,7 @@
 @media (width >= 768px) {
   .announce-card {
     padding: 20px 30px;
+    margin: 0px 30px;
   }
 
   .announce-info-and-host {
@@ -97,6 +93,14 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .announce-information {
+    width: 100%;
+  }
+
+  .announce-title {
+    font-size: 24px;
   }
 
   .announce-rating-host {
@@ -108,7 +112,7 @@
 
   .announce-dropdowns {
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     gap: 10px;
   }
 }
